# codex-hue-windows

./: .gitattributes  .gitignore  CONTRIBUTING.md  Install-CodexHueWindows.ps1  LICENSE  README.md  SECURITY.md  UPSTREAM.md  Uninstall-CodexHueWindows.ps1  pyproject.toml
.github/workflows/: ci.yml
src/codex_hue/: __init__.py  cli.py
tests/: test_indicator.py  test_platform_support.py
