[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-hue"
version = "0.1.0"
description = "Use a Philips Hue room as a concurrency-aware status indicator for Codex."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "codex-hue contributors"}]
keywords = ["codex", "philips-hue", "smart-home", "status-light"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Home Automation",
]
dependencies = []

[project.scripts]
codex-hue = "codex_hue.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
