[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-hue-windows"
version = "0.2.0"
description = "Cross-platform Philips Hue status indicator for Codex, including native Windows support."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "codex-hue contributors"}]
keywords = ["codex", "philips-hue", "smart-home", "status-light", "windows"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Home Automation",
]
dependencies = []

[project.scripts]
codex-hue = "codex_hue.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
